# launchinfo

./: CMakeLists.txt  LICENSE  README.md
include/: LaunchInfo.h
src/: LaunchInfo.cpp
